keycloak-operator/httproute-external.yaml
# Primary external route. Issuer URL = https://keycloak.shion1305.com.
# All OIDC clients (harbor-ui, cloudflare-grafana, ...) point here.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-external
  namespace: keycloak
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - keycloak.shion1305.com
  rules:
    - backendRefs:
        - name: keycloak-service
          port: 8080
